Feat: typewriter effect and wave hand

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,30 +17,21 @@ import { days } from '../data/day';
     >
       <div class=''></div>
       <div class='text-sm text-center mb-2 md:mb-0'>
-        <div class='mb-2 footer-text-t font-medium'>
+        <div class='mb-2 font-medium footer-text-t'>
           © 2022 Code by{' '}
           <a
-            href='https://github.com/aleksastojsic'
+            href='https://github.com/aleksastojsic/astro-portfolio'
             target='_blank'
             rel='noopener noreferrer'
             class='hover:underline'
           >
-            aleksa
-          </a>{' '}
-          • Inspired by{' '}
-          <a
-            href='https://github.com/saadeghi/daisy-blog'
-            target='_blank'
-            rel='noopener noreferrer'
-            class='hover:underline'
-          >
-            Daisy Blog
-          </a>
+            aleksa</a
+          >{' '}• All rights reserved
         </div>
         <div
-          class='flex md:flex-row mx-auto text-center justify-center text-slate-500 dark:text-gray-500'
+          class='flex md:flex-row mx-auto text-center justify-center footer-text-b'
         >
-          Have a great {days[new Date().getDay()]}!
+          ~ Have a great {days[new Date().getDay()]} ~
         </div>
       </div>
       {
