--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -33,7 +33,7 @@ const {
     <meta name='generator' content={Astro.generator} />
     <script src='https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js'
     ></script>
-    <script></script>
+
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
     <link
@@ -46,7 +46,7 @@ const {
   </head><body class='flex flex-col items-center h-screen'>
     <div class='w-full max-w-3xl flex-grow'>
       <Navbar />
-      <div class='p-4'>
+      <div class='px-4 pt-4 md:pt-8'>
         <div class='prose lg:prose-lg min-w-full'><slot /></div>
       </div>
     </div>
