--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,17 +17,17 @@ import Layout from '../components/layouts/Layout.astro';
     at Singidunum University and completed many online courses alongside.
   </p>
   <p>
-    Passionate and self-motivated junior{' '}
-    <span class='highlight'>full-stack software developer</span> eager to turn ideas
-    into applications. My ambitions are to stay on the leading edge of the <span
-      class='highlight'>web development</span
-    > industry and find new learning opportunities or projects to keep improving
-    rapidly as a developer.
+    Passionate and self-motivated {' '}
+    <span class='highlight'>full-stack web developer</span>, eager to turn ideas
+    into applications. My ambitious are to stay on the leading edge of the
+    always changing <span class='highlight'>web development</span> world and find
+    new learning opportunities or projects to keep improving.
   </p>
   <p>
-    I work to create modern, responsive websites and applications that suit the
-    wants and needs of my clients while solving problems through innovative
-    solutions and collaboration.
+    I work to create <span class='highlight'
+      >modern, responsive websites and applications</span
+    > that suit the wants and needs of my clients while solving problems through
+    innovative solutions and collaboration.
   </p>
   <p>
     Out of the office, you will find me traveling, dreaming of basketball,
