--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -1,10 +1,10 @@
 <label
   class='btn btn-square btn-ghost swap swap-rotate'
-  data-toggle-theme='night'
+  data-toggle-theme='winter'
   data-act-class='swap-active'
 >
   <svg
-    class='swap-on fill-current w-5 h-5'
+    class='swap-off fill-current w-5 h-5'
     xmlns='http://www.w3.org/2000/svg'
     viewBox='0 0 24 24'
     ><path
@@ -12,7 +12,7 @@
     ></path>
   </svg>
   <svg
-    class='swap-off fill-current w-5 h-5'
+    class='swap-on fill-current w-5 h-5'
     xmlns='http://www.w3.org/2000/svg'
     viewBox='0 0 24 24'
     ><path
