--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -6,7 +6,7 @@ import ReadTime from './utilities/ReadTime.astro';
 ---
 
 <div
-  class='py-6 flex flex-col sm:flex-row-reverse gap-6 sm:gap-10 items-center'
+  class='py-0 sm:py-4 flex flex-col sm:flex-row-reverse sm:gap-10 items-center'
 >
   {
     post.img && (
@@ -22,8 +22,10 @@ import ReadTime from './utilities/ReadTime.astro';
     )
   }
   <div class='flex flex-col'>
-    <h2 class='text-2xl font-bold !my-0'>
-      <a class='no-underline hover:underline' href={`/${post.slug}`}
+    <h2 class='!my-0'>
+      <a
+        class='font-semibold no-underline hover:underline'
+        href={`/${post.slug}`}
         >{post.title}
       </a>
     </h2>
