--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,9 @@ import Avatar from '../components/utilities/Avatar.astro';
 <Layout title='Contact' description='Contact me'>
   <h1>Contact me</h1>
   <div class='flex flex-col items-center h-full justify-center'>
-    <div class='mt-[-36px] flex flex-row items-center justify-center gap-4'>
+    <div
+      class='mt-[-24px] flex flex-col sm:flex-row items-start sm:items-center justify-center gap-4'
+    >
       <Avatar />
       <p>
         Feel free to reach out to me at any time, I am always interested in{' '}
@@ -14,7 +16,7 @@ import Avatar from '../components/utilities/Avatar.astro';
       </p>
     </div>
     <form
-      class='flex flex-col items-center justify-center w-full'
+      class='w-full flex flex-col items-center justify-center gap-2'
       target='_blank'
       action='https://formsubmit.co/9f2e38d7a97aa8e4fad043b4b83b9558'
       method='POST'
@@ -76,10 +78,11 @@ import Avatar from '../components/utilities/Avatar.astro';
           </div>
         </label>
       </div>
-      <div
-        class='flex flex-row items-center justify-start gap-2 w-full pt-2 md:pt-4'
-      >
-        <button type='submit' class='btn btn-primary gap-1'>
+      <div class='flex flex-row items-center justify-start gap-4 w-full'>
+        <button
+          type='submit'
+          class='btn btn-secondary gap-1 hover:text-slate-300'
+        >
           <svg
             xmlns='http://www.w3.org/2000/svg'
             class='icon icon-tabler icon-tabler-send'
@@ -99,7 +102,7 @@ import Avatar from '../components/utilities/Avatar.astro';
             ></path>
           </svg> Send
         </button>
-        <button type='reset' class='btn gap-1'>
+        <button type='reset' class='btn gap-1 text-slate-300'>
           <svg
             xmlns='http://www.w3.org/2000/svg'
             class='icon icon-tabler icon-tabler-eraser'
