--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -93,7 +93,7 @@ import { projects } from '../data/project';
                     <path stroke='none' d='M0 0h24v24H0z' fill='none' />
                     <path d='M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5' />
                   </svg>
-                  <span class='ml-1'>GitHub</span>
+                  <span class='ml-1'>Source</span>
                 </a>
               </div>
             </div>
@@ -119,7 +119,7 @@ import { projects } from '../data/project';
         href='https://github.com/aleksastojsic'
         target='_blank'
         rel='noopener noreferrer'
-        class='btn btn-secondary flex flex-row items-center justify-center'
+        class='btn flex flex-row items-center justify-center hover:scale-105 hover:shadow-md transition-all duration-300 ease-in-out text-slate-300'
       >
         <svg
           xmlns='http://www.w3.org/2000/svg'
@@ -138,7 +138,7 @@ import { projects } from '../data/project';
             d='M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5'
           ></path>
         </svg>
-        <span class='ml-2 mt-1 uppercase'>View more on GitHub</span>
+        <span class='ml-2 uppercase'>View more on GitHub</span>
       </a>
     </div>
   </div>
