Fix: lighthouse score optimization

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,13 +9,8 @@ import { navItems } from '../data/nav';
       class='p-2 hover:underline md:text-2xl font-bold flex gap-4 items-center'
       href='/'
     >
-      {
-        /* If you want your image before the site title, uncomment img below and remove pt-4 from the 1st parent div above */
-      }
-      {/* Change the img to Image with next/image */}
-      {
-        /* <img src="https://api.lorem.space/image/face?w=96&h=96" width="48" height="48" alt="Astro Blog" class="rounded-full bg-base-200 md:w-12 md:h-12 w-9 h-9"> */
-      }
+      <!-- If you want your image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
+        <img src="https://api.lorem.space/image/face?w=96&h=96" width="48" height="48" alt="Astro Blog" class="rounded-full bg-base-200 md:w-12 md:h-12 w-9 h-9">  -->
       aleksa.codes
     </a>
   </div>
