--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,6 @@
 import Layout from '../components/layouts/Layout.astro';
 ---
 
-<!-- <script>
-  // @ts-ignore
-  import Typewriter from 'typewriter-effect/dist/core';
-
-  const typed = document.getElementById('typed');
-  const typewriter = new Typewriter(typed, {
-    loop: false,
-    autoStart: true
-  });
-
-  typewriter.typeString('Hello World').start();
-</script> -->
 <Layout>
   <h1 class='flex flex-row items-center justify-start'>
     <span id='typed'></span>
@@ -22,8 +10,8 @@ import Layout from '../components/layouts/Layout.astro';
         class='animate-waving-hand'
         src='/waving-hand.webp'
         alt='waving hand'
-        width={48}
-        height={48}
+        width='48'
+        height='48'
       />
     </span>
   </h1>
