--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '../../styles/global.css';
 import Footer from '../Footer.astro';
 import Navbar from '../Navbar.astro';
 import SEO from '../SEO.astro';
+
 export interface Props {
   title?: string;
   description?: string;
@@ -33,13 +34,13 @@ const {
     <meta name='generator' content={Astro.generator} />
     <script src='https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js'
     ></script>
-
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
-    <link
-      href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap'
-      rel='stylesheet'
-    />
+    <style
+      data-href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap'
+    >
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+    </style>
     <SEO
       {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle }}
     />
