Fix: lighthouse score optimization #3

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Font from '../utilities/Font.astro';
 import '../../styles/global.css';
 import Footer from '../Footer.astro';
 import Navbar from '../Navbar.astro';
@@ -36,11 +37,7 @@ const {
     ></script>
     <link rel='preconnect' href='https://fonts.googleapis.com' />
     <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
-    <style
-      data-href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap'
-    >
-      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
-    </style>
+    <Font />
     <SEO
       {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle }}
     />
