Fix: lighthouse score optimization #4

--- a/src/components/utilities/Font.astro
+++ b/src/components/utilities/Font.astro
@@ -1,12 +1,15 @@
+<link rel='preconnect' href='https://fonts.googleapis.com' />
+<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
 <style
-  data-href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=optional'
+  data-href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap'
 >
+  /* devanagari */
   /* devanagari */
   @font-face {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJbecmNE.woff2)
       format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
@@ -17,7 +20,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJnecmNE.woff2)
       format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
@@ -28,7 +31,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfecg.woff2)
       format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -40,7 +43,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z11lFc-K.woff2)
       format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
@@ -51,7 +54,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1JlFc-K.woff2)
       format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
@@ -62,7 +65,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1xlFQ.woff2)
       format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -74,7 +77,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z11lFc-K.woff2)
       format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
@@ -85,7 +88,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1JlFc-K.woff2)
       format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
@@ -96,7 +99,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1xlFQ.woff2)
       format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -108,7 +111,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z11lFc-K.woff2)
       format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
@@ -119,7 +122,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1JlFc-K.woff2)
       format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
@@ -130,7 +133,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2)
       format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -142,7 +145,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDD4Z11lFc-K.woff2)
       format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
@@ -153,7 +156,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDD4Z1JlFc-K.woff2)
       format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
@@ -164,7 +167,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDD4Z1xlFQ.woff2)
       format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -176,7 +179,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 900;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLBT5Z11lFc-K.woff2)
       format('woff2');
     unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
@@ -187,7 +190,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 900;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLBT5Z1JlFc-K.woff2)
       format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
@@ -198,7 +201,7 @@
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 900;
-    font-display: optional;
+    font-display: swap;
     src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLBT5Z1xlFQ.woff2)
       format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
