--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,8 @@ import Layout from '../components/layouts/Layout.astro';
 <Layout>
   <h1 class='flex flex-row items-center justify-start'>
     <span id='typed'></span>
-    <span class='not-prose ml-4'>
-      <img
-        class='animate-waving-hand'
-        src='/waving-hand.webp'
-        alt='waving hand'
-        width='48'
-        height='48'
-      />
+    <span class='not-prose ml-4 animate-waving-hand'>
+      <img src='/waving-hand.webp' alt='waving hand' width='48' height='48' />
     </span>
   </h1>
   <h1 class='mb-[-48px] lg:mb-[-48px]'>My name is Aleksa</h1>
