--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,12 @@ import Layout from '../components/layouts/Layout.astro';
     <span id='typed'></span>
     <span class='not-prose ml-4 animate-waving-hand w-[48px] h-[48px]'>
       <img
-        src='/src/assets/waving-hand.webp'
+        src='/waving-hand.webp'
         alt='waving hand'
         class='w-full h-full'
         srcset='
-          /src/assets/waving-hand.webp 1x,
-          /src/assets/waving-hand.webp 2x
+          /waving-hand.webp 1x,
+          /waving-hand.webp 2x
         '
       />
     </span>
