Feat: increase the contrast for text on index page to imporve accessibility

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Layout from '../components/layouts/Layout.astro';
     I design and build{' '}
     <span class='highlight-heading'>things for the web.</span>
   </h2>
-  <div class='opacity-80 text-xl font-semibold'>
+  <div class='text-xl font-semibold'>
     Computer Science Student and Web Developer.
   </div>
 </Layout>
