Fix: contrast for read-time text

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -31,7 +31,7 @@ const post: Post = Astro.props.post;
         >{post.title}
       </a>
     </h2>
-    <div class='flex flex-row items-center gap-2 text-sm text-gray-400 pt-2'>
+    <div class='flex flex-row items-center gap-2 text-sm pt-2'>
       <span>
         <Date date={post.date} />
       </span>
