--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -68,7 +68,7 @@ const {
         )
       }
       <h1>{post.title}</h1>
-      <div class='flex flex-row items-center gap-2 text-lg text-gray-500'>
+      <div class='flex flex-row items-center gap-2 text-lg'>
         <span>
           <Date date={post.date} />
         </span>
