Feat: buy me a coffee widget, even if nobody gonna buy it

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -38,7 +38,8 @@ const {
     <SEO
       {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle }}
     />
-  </head><body class='flex flex-col items-center h-screen'>
+  </head>
+  <body class='flex flex-col items-center h-screen'>
     <div class='w-full max-w-3xl flex-grow'>
       <Navbar />
       <div class='px-4 pt-4 md:pt-8'>
@@ -48,5 +49,17 @@ const {
       </div>
     </div>
     <Footer />
+    <script
+      data-name='BMC-Widget'
+      data-cfasync='false'
+      src='https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js'
+      data-id='aleksa'
+      data-description='Support me on Buy me a coffee!'
+      data-message='Thanks for visiting. Made with 💻 and ☕.'
+      data-color='#FF813F'
+      data-position='Right'
+      data-x_margin='8'
+      data-y_margin='8'
+    ></script>
   </body>
 </html>
