--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -104,6 +104,7 @@ import { projects } from '../data/project';
                 height={300}
                 format={'webp'}
                 class='justify-center rounded-lg  hover:scale-105 hover:shadow-md transition-all duration-300 ease-in-out'
+                srcset={img + ' 1x,' + img + ' 2x'}
               />
             </a>
           </div>
