--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -52,6 +52,7 @@ const {
               height={post.imgHeight}
               format={'webp'}
               class='rounded bg-base-200'
+              srcset={post.img + ' 1x,' + post.img + ' 2x'}
             />
           </figure>
         ) : (
