--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import { days } from '../data/day';
   </svg>
   <div class='wave-b'>
     <div
-      class='max-w-5xl mx-auto py-8 px-4 lg:px-0 grid grid-cols-1 md:grid-cols-3'
+      class='max-w-5xl mx-auto py-8 px-4 lg:px-0 grid grid-cols-1 lg:grid-cols-3'
     >
       <div class=''></div>
       <div class='text-sm text-center mb-2 md:mb-0'>
