--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -33,10 +33,8 @@ const {
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta name='generator' content={Astro.generator} />
-    <script>
-      import { themeChange } from 'theme-change';
-      themeChange();
-    </script>
+    <script src='https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js' async
+    ></script>
     <SEO
       {...{ title, description, siteName, canonical, ogImage, ogType, twitterHandle }}
     />
