--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -30,9 +30,13 @@ const {
   <head>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link rel='icon' type='image/x-icon' href='/favicon.ico' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta name='generator' content={Astro.generator} />
+    <meta
+      name='google-site-verification'
+      content='5Bs5tGO6oss24P4orTo__H9R_w2YmD7uIGrd-Az8Nn8'
+    />
     <script src='https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js' async
     ></script>
     <SEO
