--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -41,7 +41,7 @@ const {
   canonical={import.meta.env.SITE + post.slug}
 >
   <div class='flex justify-center'>
-    <div class='flex flex-col prose lg:prose-lg min-w-full py-4'>
+    <div class='flex flex-col prose lg:prose-lg min-w-full py-4 break-words'>
       {
         post.img && post.imgWidth && post.imgHeight ? (
           <figure class='flex justify-center'>
