--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -69,7 +69,7 @@ const {
         )
       }
       <h1>{post.title}</h1>
-      <div class='flex flex-row items-center gap-2 text-lg'>
+      <div class='flex flex-row items-center gap-2 text-base sm:text-lg'>
         <span>
           <Date date={post.date} />
         </span>
