--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -9,7 +9,7 @@ export interface Props {
   twitterHandle?: string;
 }
 
-const DOMAIN = 'https://www.aleksa.codes';
+const DOMAIN = 'https://aleksa.codes';
 const DEFAULT_OG_IMAGE =
   'https://og-image.vercel.app/**aleksa.codes**.jpeg?theme=dark&md=1&fontSize=150px&images=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Ffront%2Fassets%2Fdesign%2Fnextjs-white-logo.svg&images=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2Fremojansen%2Flogo.ts%40master%2Fts.svg';
 const {
