Fix: og image fix because vercel made id hard for no reason :)

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -10,8 +10,7 @@ export interface Props {
 }
 
 const DOMAIN = 'https://aleksa.codes';
-const DEFAULT_OG_IMAGE =
-  'https://og-image.vercel.app/**aleksa.codes**.jpeg?theme=light&md=1&fontSize=175px&images=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Ffront%2Fassets%2Fdesign%2Fvercel-triangle-black.svg&images=https%3A%2F%2Faleksa.codes%2Fandroid-chrome-512x512.png&images=https%3A%2F%2Ftoppng.com%2Fuploads%2Fpreview%2Fclear-11550721271xzehwonrlp.png&widths=0&widths=undefined&widths=0&heights=0&heights=undefined&heights=0';
+const DEFAULT_OG_IMAGE = 'https://i.postimg.cc/Kvcp7pzY/aleksa-codes.jpg';
 const {
   title = 'Home',
   description = "Aleksa is a web developer that works on the user interface design and frontend development. He's passionate about design, coding and building things for the web.",
