--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -10,7 +10,7 @@ export interface Props {
 }
 
 const DOMAIN = 'https://aleksa.codes';
-const DEFAULT_OG_IMAGE = 'https://i.postimg.cc/Kvcp7pzY/aleksa-codes.jpg';
+const DEFAULT_OG_IMAGE = 'https://i.postimg.cc/50B1zKt3/aleksa-codes.png';
 const {
   title = 'Home',
   description = "Aleksa is a web developer that works on the user interface design and frontend development. He's passionate about design, coding and building things for the web.",
