Fix: Safari doesnt like innerHtml with span looks like

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,11 +33,11 @@ import { days } from '../data/day';
             class='hover:underline'>Storyset</a
           >
         </div>
-        <span
+        <div
           id='footer-message'
           class='flex md:flex-row mx-auto text-center justify-center footer-text-b'
         >
-        </span>
+        </div>
       </div>
     </div>
   </div>
