Fix: testing safari innerHtml in script still doesnt work

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,7 +42,7 @@ import { days } from '../data/day';
     </div>
   </div>
 </footer>
-<script define:vars={{ days }}>
+<script define:vars={{ days }} is:inline>
   function getCurrentDay() {
     const today = new Date();
     const day = today.getDay();
