Fix: script change for submiting the issue

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,7 +43,7 @@ import { days } from '../data/day';
     </div>
   </div>
 </footer>
-<!-- <script define:vars={{ days }} is:raw>
+<!-- <script define:vars={{ days }}>
   function getCurrentDay() {
     const today = new Date();
     const day = today.getDay();
