--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -36,14 +36,13 @@ import { days } from '../data/day';
         <div
           id='footer-message'
           class='flex md:flex-row mx-auto text-center justify-center footer-text-b'
-          set:html={`~ Have a great ${days[new Date().getDay()]} ~`}
         >
         </div>
       </div>
     </div>
   </div>
 </footer>
-<!-- <script define:vars={{ days }}>
+<script define:vars={{ days }}>
   function getCurrentDay() {
     const today = new Date();
     const day = today.getDay();
@@ -51,5 +50,5 @@ import { days } from '../data/day';
   }
   const day = getCurrentDay();
   const footerMessage = document.getElementById('footer-message');
-  footerMessage.innerHTML = `~ Have a great ${day}! ~`;
-</script> -->
+  footerMessage.innerText = `~ Have a great ${day} ~`;
+</script>
