Fix: comment out script

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,7 +43,7 @@ import { days } from '../data/day';
     </div>
   </div>
 </footer>
-<script define:vars={{ days }}>
+<!-- <script define:vars={{ days }}>
   function getCurrentDay() {
     const today = new Date();
     const day = today.getDay();
@@ -52,4 +52,4 @@ import { days } from '../data/day';
   const day = getCurrentDay();
   const footerMessage = document.getElementById('footer-message');
   footerMessage.innerHTML = `~ Have a great ${day} ~`;
-</script>
+</script> -->
