Fix: revert to the innerHtml for the issue example

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,17 +33,24 @@ import { days } from '../data/day';
             class='hover:underline'>Storyset</a
           >
         </div>
-        <div
+        <!-- set:html example -->
+        <!-- <div
           id='footer-message'
           class='flex md:flex-row mx-auto text-center justify-center footer-text-b'
           set:html={`~ Have a great ${days[new Date().getDay()]} ~`}
+        >
+        </div> -->
+        <!-- innerHtml example -->
+        <div
+          id='footer-message'
+          class='flex md:flex-row mx-auto text-center justify-center footer-text-b'
         >
         </div>
       </div>
     </div>
   </div>
 </footer>
-<!-- <script define:vars={{ days }}>
+<script define:vars={{ days }}>
   function getCurrentDay() {
     const today = new Date();
     const day = today.getDay();
@@ -52,4 +59,4 @@ import { days } from '../data/day';
   const day = getCurrentDay();
   const footerMessage = document.getElementById('footer-message');
   footerMessage.innerHTML = `~ Have a great ${day} ~`;
-</script> -->
+</script>
