Feat: comments for blog posts via utterances

--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -99,6 +99,16 @@ const {
       </div>
       <div>
         <Content />
+        <hr />
+        <script
+          src='https://utteranc.es/client.js'
+          repo='aleksastojsic/astro-portfolio'
+          issue-term='og:title'
+          label='comment✨💬✨'
+          theme='preferred-color-scheme'
+          crossorigin='anonymous'
+          async
+        ></script>
       </div>
     </div>
   </div>
