--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -105,7 +105,7 @@ const {
           repo='aleksastojsic/astro-portfolio'
           issue-term='og:title'
           label='comment✨💬✨'
-          theme='preferred-color-scheme'
+          theme='dark-blue'
           crossorigin='anonymous'
           async
         ></script>
